--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,10 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="./assets/css/style.css">    
 </head>
 <body>
   <app-root></app-root>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>   
 </body>
 </html>
